# rasterizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: buffer.hpp  camera.cpp  camera.hpp  frame_buffer.hpp  main.cpp  matrix.hpp  model.cpp  model.hpp  rasterizer.cpp  rasterizer.hpp  shader.cpp  shader.hpp  utils.cpp  utils.hpp  vector.hpp
